[tool.poetry]
name = "python-getting-started"
version = "0.1.0"
description = ""
authors = ["Jonathan Bayless <baylessjonathan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django-heroku = "^0.3.1"
gunicorn = "^20.0.4"
Django = "^3.2.17"
requests = "^2.25.1"
Pillow = "^9.3.0"
django-extra-views = "^0.13.0"
django-sendgrid-v5 = "^0.9.1"
django-shapeshifter = "^18.9.23"
pylibmc = "^1.6.1"
django-money = "^1.3.1"
python-dateutil = "^2.8.1"
sentry-sdk = "^1.0.0"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
